# convex-ad

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: job.sh  run_reconstruction.py
notebooks/: demo.ipynb  start.sh
src/convex_ad/: core.py  losses.py  phase.py  support.py  viz.py
src/convexad/: __init__.py  core.py  losses.py  phase.py  support.py  utils.py  viz.py
