[project]
name = "convex-ad"
version = "0.1.0"
description = "A geometrically regularized automatic differentiation framework for BCDI phase retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorcet>=3.1.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "tensorflow[and-cuda]>=2.21.0",
    "tensorrt>=10.15.1.29",
    "scipy>=1.13", 
    "scikit-image>=0.25",
    "hdf5plugin>=5.0.0",
    "matplotlib>=3.8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
